<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragment.Tutorial_2">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:contentDescription="Haha"
        android:src="@drawable/ig_tutorial_play_2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tutorial_1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/how_to_play"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/getStartAtTutorial"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#07AC0A"
        android:text="@string/btn_get_start"
        app:backgroundTint="@null" />

</LinearLayout>