<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".activity.RegisterAccountActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_store" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/sologan_at_login_1"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/slogan_at_register_1"
                android:textSize="22sp" />
        </LinearLayout>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/bg_spinner_choice_day_history_trans"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout_username_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:focusable="false"
            android:hint="@string/account"
            android:textColorHint="@color/teal_700"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_username_register"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout_password_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:focusable="false"
            android:hint="@string/pass"
            android:textColorHint="@color/teal_700"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_password_register"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout_password2_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:focusable="false"
            android:hint="@string/re_pass"
            android:textColorHint="@color/teal_700"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_password2_register"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout_email_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:focusable="false"
            android:hint="@string/email"
            android:textColorHint="@color/teal_700"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_email_register"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLength="20"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/custom_btn_login"
            android:fontFamily="monospace"
            android:text="@string/btn_register"
            android:textColor="@color/red"
            app:backgroundTint="@null" />

        <TextView
            android:id="@+id/tv_backToLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="cursive"
            android:text="@string/tv_from_register_backto_login"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="20sp" />


    </LinearLayout>
</LinearLayout>