<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_logIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LogInActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_slogan1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/sologan_at_login_1"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_slogan2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/sologan_at_login_2"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:src="@mipmap/ic_launcher_round" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:focusable="false"
                android:hint="@string/account"
                android:textColorHint="@color/teal_700"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_username"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:maxLength="20"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:hint="@string/pass"
                android:textColorHint="@color/teal_700"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_password"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_logIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_btn_login"
                android:fontFamily="monospace"
                android:text="@string/login"
                android:textColor="@color/pink" />

            <TextView
                android:id="@+id/tv_registerAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="cursive"
                android:text="@string/tv_register_login"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

